clusters/takeout/apps/games/project-zomboid/secondary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-zomboid-secondary
  namespace: games
spec:
  selector:
    matchLabels:
      app: project-zomboid-secondary
  serviceName: project-zomboid-secondary
  replicas: 1 # active longhorn
  template:
    metadata:
      labels:
        app: project-zomboid-secondary
    spec:
      containers:
      - name: project-zomboid
        image: afey/zomboid:latest
        # command: ["tail","-f","/dev/null"]
        ports:
        - containerPort: 8766
          name: data1
          protocol: UDP
        - containerPort: 8767
          name: data2
          protocol: UDP
        - containerPort: 16261
          name: data3
          protocol: UDP
        volumeMounts:
        - name: project-zomboid-secondary-data
          mountPath: /server-data
        - name: project-zomboid-secondary-files
          mountPath: /server-files
        resources:
          limits:
            memory: 12Gi # was 16Gi
          requests:
            cpu: 1000m
      - name: filebrowser
        image: filebrowser/filebrowser:v2
        args: ["-d","/db/database.db"]
        ports:
        - containerPort: 80
          name: fb-http
          protocol: TCP
        volumeMounts:
        - name: project-zomboid-secondary-data
          subPath: filebrowser
          mountPath: /db
        - name: project-zomboid-secondary-data
          mountPath: /srv/server-data
      volumes:
        - name: project-zomboid-secondary-files-config
          configMap:
              name: project-zomboid-secondary-files-config
        - name: project-zomboid-secondary-data
          persistentVolumeClaim:
            claimName: project-zomboid-secondary-data
        - name: project-zomboid-secondary-files
          persistentVolumeClaim:
            claimName: project-zomboid-secondary-files
